# communication_fusion_connectivity

./: .gitignore  OAT.xml  README.OpenSource  README.en.md  README.md  bundle.json  fusion_connectivity.gni
frameworks/ets/ets/: @ohos.FusionConnectivity.PartnerAgentExtensionAbility.ets  @ohos.FusionConnectivity.PartnerAgentExtensionContext.ets
frameworks/extension/: BUILD.gn  IPartnerAgentExtension.idl
frameworks/extension/include/: partner_agent_extension.h  partner_agent_extension_context.h  partner_agent_extension_stub_impl.h
frameworks/extension/src/: partner_agent_extension.cpp  partner_agent_extension_context.cpp  partnre_agent_extension_stub_impl.cpp
frameworks/inner/: BUILD.gn
frameworks/inner/include/: log.h
frameworks/inner/src/: partner_device_agent.cpp
frameworks/napi/: BUILD.gn
frameworks/napi/include/: napi_async_callback.h  napi_async_work.h  napi_fusion_connectivity_error.h  napi_native_object.h  napi_parser_utils.h  napi_partner_device_agent.h  napi_timer.h
frameworks/napi/include/extension/: js_partner_agent_extension.h  js_partner_agent_extension_context.h  partner_agent_extension_module_loader.h
frameworks/napi/src/: napi_async_callback.cpp  napi_async_work.cpp  napi_fusion_connectivity_error.cpp  napi_native_object.cpp  napi_parser_utils.cpp  napi_partner_device_agent.cpp  napi_timer.cpp  native_module_fusion_connectivity.cpp
frameworks/napi/src/extension/: BUILD.gn  js_partner_agent_extension.cpp  js_partner_agent_extension_context.cpp  partner_agent_extension_module_loader.cpp
idl/: BUILD.gn  IFusionConnectivityTypes.idl  IPartnerDeviceAgent.idl
idl/include/: partner_device_address.h
idl/src/: partner_device_address.cpp
interfaces/extension/: BUILD.gn
interfaces/extension/ability/: BUILD.gn  partner_agent_extension_ability.js  partner_agent_extension_ability_module.cpp
interfaces/extension/context/: BUILD.gn  partner_agent_extension_context.js  partner_agent_extension_context_module.cpp
interfaces/inner_api/: fusion_connectivity_def.h  fusion_connectivity_errorcode.h  partner_device_agent.h
sa_profile/: 8630.json  BUILD.gn
services/common/include/: base_def.h  common_utils.h  fcm_common_event_subscriber.h  fcm_safe_map.h  fcm_thread_util.h  log.h  log_util.h  message.h  permission_item.h  permission_manager.h  timer_manager.h  timer_manager_ffrt.h
services/common/src/: common_utils.cpp  fcm_common_event_subscriber.cpp  fcm_thread_util.cpp  log_util.cpp  permission_manager.cpp  timer_manager.cpp
services/etc/init/: BUILD.gn  fusion_connectivity.cfg
services/etc/param/: BUILD.gn  fusion_connectivity.para  fusion_connectivity.para.dac
services/server/: BUILD.gn  libpartner_device_agent_server_version_script.txt
services/server/include/: device_agent_capability_ble_adv.h  device_agent_capability_br.h  fusion_conn_load_utils.h  i_device_agent_capability.h  partner_device.h  partner_device_agent_server.h  partner_device_config.h  remote_application_container.h
services/server/include/extension/: bundle_helper.h  extension_service_common.h  extension_service_connection.h  extension_service_connection_notifier.h  extension_service_connection_service.h  remote_death_recipient.h
services/server/src/: device_agent_capability_ble_adv.cpp  device_agent_capability_br.cpp  fusion_conn_load_utils.cpp  partner_device.cpp  partner_device_agent_server.cpp  partner_device_config.cpp
services/server/src/extension/: bundle_helper.cpp  extension_service_connection.cpp  extension_service_connection_notifier.cpp  extension_service_connection_service.cpp  extension_service_extern_interface.cpp
test/: BUILD.gn
test/fuzztest/fusion_connectivity_fuzzer/: BUILD.gn  fusion_connectivity_fuzzer.cpp  fusion_connectivity_fuzzer.h  project.xml
test/unittest/fusion_connectivity/: BUILD.gn  fusion_connectivity_test.cpp
test/unittest/partner_device/: BUILD.gn  device_agent_capability_ble_adv_test.cpp  device_agent_capability_br_test.cpp
