# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

fusion_connectivity_path = "//foundation/communication/fusion_connectivity/"

declare_args() {
    fusion_connectivity_partner_agent_feature = false
    fusion_connectivity_settings_bundle_name = ""
    fusion_connectivity_settings_main_ability = ""
}