# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/config/components/idl_tool/idl.gni")

FUSION_CONN = "//foundation/communication/fusion_connectivity"

config("partner_agent_extension_interface_config") {
  include_dirs = [
    "${target_gen_dir}",
    "$FUSION_CONN/idl",
  ]
}

idl_gen_interface("partner_agent_extension_interface") {
  sources = [ "IPartnerAgentExtension.idl" ]
  sources_common = [
    "$FUSION_CONN/idl/IFusionConnectivityTypes.idl",
  ]
  log_domainid = "0xD000100"
  log_tag = "PartnerAgentExtension"
  subsystem_name = "communication"
  part_name = "fusion_connectivity"
  configs = [
    ":partner_agent_extension_interface_config",
  ]
}

config("partner_agent_extension_ipc_public_config") {
  visibility = [ ":*" ]

  include_dirs = [ "${target_gen_dir}" ]
}

ohos_source_set("partner_agent_extension_proxy") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  public_configs = [ ":partner_agent_extension_ipc_public_config" ]
  output_values = get_target_outputs(":partner_agent_extension_interface")
  sources = filter_include(output_values, [ "*_proxy.cpp" ])
  defines = [
    "LOG_DOMAIN = 0xD000100",
  ]
  include_dirs = [
    "$FUSION_CONN/idl/include",
  ]
  deps = [
    ":partner_agent_extension_interface",
    "$FUSION_CONN/idl:libpartner_device_agent_proxy",
    "$FUSION_CONN/idl:libpartner_device_agent_stub",
  ]
  external_deps = [
    "ability_base:configuration",
    "ability_base:want",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]
  subsystem_name = "communication"
  part_name = "fusion_connectivity"
}

ohos_source_set("partner_agent_extension_stub") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  public_configs = [ ":partner_agent_extension_ipc_public_config" ]
  output_values = get_target_outputs(":partner_agent_extension_interface")
  sources = filter_include(output_values, [ "*_stub.cpp" ])
  include_dirs = [
    "$FUSION_CONN/idl/include",
  ]
  deps = [
    ":partner_agent_extension_interface",
    "$FUSION_CONN/idl:libpartner_device_agent_proxy",
    "$FUSION_CONN/idl:libpartner_device_agent_stub",
  ]
  external_deps = [
    "ability_base:configuration",
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]
  defines = [
    "LOG_DOMAIN = 0xD000100",
  ]
  subsystem_name = "communication"
  part_name = "fusion_connectivity"
}

ohos_shared_library("partner_agent_extension_ipc") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  include_dirs = [
    "$FUSION_CONN/idl/include",
  ]

  sources = []

  configs = []
  public_configs = [ ":partner_agent_extension_ipc_public_config" ]

  deps = [
    ":partner_agent_extension_proxy",
    ":partner_agent_extension_stub",
    "$FUSION_CONN/idl:libpartner_device_agent_proxy",
    "$FUSION_CONN/idl:libpartner_device_agent_stub",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]
  defines = [
    "LOG_DOMAIN = 0xD000100",
  ]
  subsystem_name = "communication"
  part_name = "fusion_connectivity"
}

ohos_source_set("partner_agent_extension_common") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  include_dirs = [ 
    "$FUSION_CONN/frameworks/extension/include",
    "$FUSION_CONN/frameworks/inner/include",
    "$FUSION_CONN/frameworks/napi/include/extension",
    "$FUSION_CONN/idl/include",
 ]

  sources = [
    "$FUSION_CONN/frameworks/extension/src/partner_agent_extension.cpp",
    "$FUSION_CONN/frameworks/extension/src/partner_agent_extension_context.cpp",
    "$FUSION_CONN/frameworks/extension/src/partnre_agent_extension_stub_impl.cpp",
  ]

  configs = []
  public_configs = []

  deps = [
    ":partner_agent_extension_ipc",
    "$FUSION_CONN/idl:libpartner_device_agent_proxy",
    "$FUSION_CONN/idl:libpartner_device_agent_stub",  
  ]

  defines = [
    "LOG_DOMAIN = 0xD000100",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:app_context",
    "ability_runtime:extensionkit_native",
    "ability_runtime:napi_common",
    "ability_runtime:runtime",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_napi",
    "napi:ace_napi",
  ]

  subsystem_name = "communication"
  part_name = "fusion_connectivity"
}