# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/es2abc_config.gni")
import("//build/ohos.gni")

es2abc_gen_abc("gen_partner_agent_extension_ability_abc") {
  src_js = rebase_path("partner_agent_extension_ability.js")
  dst_file = rebase_path(
          target_out_dir + "/partner_agent_extension_ability.abc")
  in_puts = [ "partner_agent_extension_ability.js" ]
  out_puts =
      [ target_out_dir + "/partner_agent_extension_ability.abc" ]
  extra_args = [ "--module" ]
}

gen_js_obj("partner_agent_extension_ability_js") {
  input = "partner_agent_extension_ability.js"
  output = target_out_dir + "/partner_agent_extension_ability.o"
}

gen_js_obj("partner_agent_extension_ability_abc") {
  input = get_label_info(":gen_partner_agent_extension_ability_abc",
                         "target_out_dir") +
          "/partner_agent_extension_ability.abc"
  output = target_out_dir + "/partner_agent_extension_ability_abc.o"
  dep = ":gen_partner_agent_extension_ability_abc"
}

ohos_shared_library("partneragentextensionability_napi") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  sources = [ "partner_agent_extension_ability_module.cpp" ]

  deps = [
    ":partner_agent_extension_ability_abc",
    ":partner_agent_extension_ability_js",
  ]

  external_deps = [ "napi:ace_napi" ]

  relative_install_dir = "module/fusionconnectivity"
  subsystem_name = "communication"
  part_name = "fusion_connectivity"
}
