# Copyright (C) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
 
import("//build/ohos.gni")
import("//build/ohos_var.gni")
 
group("etc") {
  deps = [
    ":fusion_connectivity_cfg",
  ]
}
 
ohos_prebuilt_etc("fusion_connectivity_cfg") {
  source = "fusion_connectivity.cfg"
  relative_install_dir = "init"
  part_name = "fusion_connectivity"
  subsystem_name = "communication"
}