# Copyright (C) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

## Install fusion_connectivity.para to /system/etc/param/fusion_connectivity.para
## Install fusion_connectivity.para.dac to /system/etc/param/fusion_connectivity.para.dac

import("//build/ohos.gni")
import("//build/ohos_var.gni")

group("etc") {
  deps = [
    ":fusion_connectivity.para",
    ":fusion_connectivity.para.dac",
  ]
}

ohos_prebuilt_etc("fusion_connectivity.para") {
  source = "fusion_connectivity.para"
  part_name = "fusion_connectivity"
  subsystem_name = "communication"
  relative_install_dir = "param"
}

ohos_prebuilt_etc("fusion_connectivity.para.dac") {
  source = "fusion_connectivity.para.dac"
  part_name = "fusion_connectivity"
  subsystem_name = "communication"
  relative_install_dir = "param"
}